# ForestFire

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  run_dashboard.sh  test_import.py
.github/workflows/: jupyter_test.yml  python-publish.yml
.streamlit/: config.toml
20/: feature_stack.npy  fuel_map_90m.tif  labels.npy
data/demo_raw/: dem_90m.tif  weather.nc
data/processed_demo/: feature_stack.npy  fuel_map_90m.tif  labels.npy
data/raw/fires_nasa/: fire_archive_M-C61_715142.shp  fire_archive_M-C61_715142.shx  fire_nrt_M-C61_715142.dbf  fire_nrt_M-C61_715142.shp  fire_nrt_M-C61_715142.shx
data/raw/lulc_bhuvan/: RAMGARH_JH_LULC50K_1516.dbf  RAMGARH_JH_LULC50K_1516.shx
notebooks/: 01_data_exploration.ipynb  02_training.ipynb
src/: dataset.py  demo_data.py  model.py  preprocess.py  simulation.py  utils.py
web/: api_server.py  app.py
